# scipy-stats-extra

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/scipy_stats_extra/: stats.py
tests/: test_stats.py
